# Smaug

./: README.md
Smaug/data/: tee-database.db
Smaug/frank_ca/: Makefile  frank_ca.h  main.c  smaug
Smaug/frank_ta/: 1111fadd-99d5-4afb-a1dc-ee3e9c61b04d.dmp  1111fadd-99d5-4afb-a1dc-ee3e9c61b04d.elf  1111fadd-99d5-4afb-a1dc-ee3e9c61b04d.map  1111fadd-99d5-4afb-a1dc-ee3e9c61b04d.stripped.elf  1111fadd-99d5-4afb-a1dc-ee3e9c61b04d.ta  Makefile  frank_ta.c  sub.mk
TrustSQLite/: trustsqlitefile.db
TrustSQLite/ree/: Makefile  frank_ca.h  main.c  trustsqlite  tzvfs_agent.c
TrustSQLite/tee/: .sqlite3.o.cmd  .sqlite3.o.d  .ta.ld.d  .ta_entry_a32.o.cmd  .ta_entry_a32.o.d  .trustsqlite.o.cmd  .trustsqlite.o.d  .tzvfs_teeuser.o.cmd  .tzvfs_teeuser.o.d  .user_ta_header.o.cmd  .user_ta_header.o.d  66666666-6666-6666-6666-666666666666.elf  66666666-6666-6666-6666-666666666666.map  66666666-6666-6666-6666-666666666666.stripped.elf  66666666-6666-6666-6666-666666666666.ta  Makefile  README.md  log.tex  sub.mk  (+3 more)
my_test/: Android.mk  CMakeLists.txt  Makefile
my_test/host/: Makefile  dbqueue.c  dbqueue.h  defs.c  defs.h  main.c  main_new.c  mhtdefs.c  mhtdefs.h  mhtfile.c  mhtfile.h  sqlite3.h
my_test/host/include/: merkleTree.h
my_test/ta/: 9aaaf200-2450-11e4-abe2-0002a5d5c51b.dmp  9aaaf200-2450-11e4-abe2-0002a5d5c51b.elf  9aaaf200-2450-11e4-abe2-0002a5d5c51b.map  9aaaf200-2450-11e4-abe2-0002a5d5c51b.stripped.elf  9aaaf200-2450-11e4-abe2-0002a5d5c51b.ta  Android.mk  Makefile  my_test_ta.c  sub.mk  ta.lds  user_ta_header_defines.h
my_test/ta/include/: my_test_ta.h
(+36 files in other folders)
